# desynced-behaviors

./: .gitignore  CLAUDE.md  behavior_format.md  behavior_source_format.md  blight_magnifier_mining.md  combat_squad_spec.md  dsc_codec.py  hex_expansion_math.md  hexat_test_log.txt  history.md  instructions_index.md  miner_drone.dcs  mock_world_spec.md  observer_redesign.md  pyproject.toml  todo.md  upcoming-changes.md
scripts/: analyze_corpus.py  collect_clipboard_corpus.py  collect_steam_forum.py  generate_instructions_index.py  render_examples.py
src/desynced_toolkit/: __init__.py  assets.py  behavior_runtime.lua  dcs_wire.py  dsc_wire.py  engine_stub.lua  interpreter.py  lua_runtime.py  lua_util.py  mock_world.py  world.lua
tests/: conftest.py  test_arrival_probe.py  test_bsf_end_to_end.py  test_bsf_ir_roundtrip.py  test_bsf_multiline.py  test_bsf_optional_ids.py  test_bsf_render_mermaid.py  test_bsf_semantic_diff.py  test_bsf_text_roundtrip.py  test_bsf_validation.py  test_compiler.py  test_dcs_wire.py  test_dsc_wire.py  test_hex_expansion.py  test_hexindexof_compiled.py  test_interpreter_call.py  test_interpreter_run_ticks.py  test_library_behaviors.py  test_lua_runtime.py  test_mock_world.py  test_mock_world_dispatch.py  test_mock_world_movement.py  test_movement_circuit_golden.py
tests/data/: HexIndexOf_test_1.dsc  adversarial_text_stress.dcs  arrival_probe.bsf  arrival_probe.dcs  beacon.dsc  beacon2.dsc  deprecated_haul_to_signal.dcs  formation-hold.dcs  hexat_test.dcs  keepvars_clear.dcs  keepvars_keep.dcs  magnifier_signal_original.dcs  mining_leader.dcs  (+4 more)
(+14 files in other folders)
