[project]
name = "desynced-toolkit"
version = "0.1.0"
description = "Compiler/decompiler and lupa-backed runtime for Desynced behavior .dsc files"
authors = [
    { name = "John Bridgman", email = "johnfbiii@gmail.com" }
]
requires-python = ">=3.14"
dependencies = [
    "lupa>=2.8",
]

[build-system]
requires = ["uv_build>=0.11.26,<0.12.0"]
build-backend = "uv_build"
