[project]
name = "desynced-behaviors"
version = "0.1.0"
description = "Personal Desynced behavior library, corpus tooling, and design docs built on blz-desynced-toolkit"
requires-python = ">=3.14"
dependencies = [
    "blz-desynced-toolkit",
]

[tool.uv.sources]
blz-desynced-toolkit = { path = "../blz-desynced-toolkit", editable = true }

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]
